<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="2dp"
    android:orientation="horizontal"
    android:padding="8dp"
    android:weightSum="9">

    <TextView
        android:id="@+id/tv_meal_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:text="@string/header_date"
        android:textColor="@color/darkGreyText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_meal_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:text="@string/header_food_name"
        android:layout_marginLeft="5dp"
        android:textColor="@color/darkGreyText"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tv_meal_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:layout_marginLeft="5dp"
        android:text="@string/header_quantity"
        android:textColor="@color/darkGreyText"
        android:textSize="16sp" />
</LinearLayout>