<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_horizontal_margin">


    <!--<TextView-->
    <!--android:id="@+id/tv_meal_cat"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_alignParentTop="true"-->
    <!--android:background="@drawable/tv_border"-->
    <!--android:text="@string/hint_chosen_cat"-->
    <!--android:padding="@dimen/activity_horizontal_margin"-->
    <!--android:textAlignment="center"-->
    <!--android:textSize="25sp" />-->

    <TextView
        android:id="@+id/tv_hint_meals_cat"
        style="@style/InputLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/hint_pet" />

    <Spinner
        android:id="@+id/sp_meals_cat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_hint_meals_cat"
        android:background="@color/lightYellowDrawer"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:spinnerMode="dialog" />

    <LinearLayout
        android:id="@+id/ll_sp_meals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sp_meals_cat"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <TextView
            android:id="@+id/tv_hint_meals_food"
            style="@style/InputLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="0dp"
            android:text="@string/hint_food" />

        <Spinner
            android:id="@+id/sp_meal_foods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_hint_meals_food"
            android:background="@color/lightGreyBackground"
            android:spinnerMode="dialog" />


        <EditText
            android:id="@+id/et_meal_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="@string/hint_meal_quantity"
            android:inputType="numberDecimal" />


        <TextView
            android:id="@+id/tv_meal_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/tv_border"
            android:text="@string/button_choose_meal_date"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_meal_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_save" />

</RelativeLayout>