<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_report_values_daily_graph"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="org.ibmt.diplom.catcareproject.view.ReportValuesDailyGraphActivity">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollview_graphs_cb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:background="@color/lightGreyBackground"
        android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

        <LinearLayout
            android:id="@+id/checkboxes_reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/cb_quantity"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item__quantity" />

                <CheckBox
                    android:id="@+id/cb_energy"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item__energy" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/cb_proteins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item__proteins" />

                <CheckBox
                    android:id="@+id/cb_fats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item__fats" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <CheckBox
                    android:id="@+id/cb_carbs"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/item__carbs" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>


        <com.jjoe64.graphview.GraphView
            android:id="@+id/gr_values_daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:layout_below="@+id/scrollview_graphs_cb"
            android:layout_marginTop="5dp" />
</RelativeLayout>
