<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_update_food"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_food_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

        <EditText
            android:id="@+id/et_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:ems="10"
            android:hint="@string/hint_foodName"
            android:textSize="22sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_food_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_food_name"
        android:layout_marginTop="20dp"
        app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

        <EditText
            android:id="@+id/et_food_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_foodState" />
    </android.support.design.widget.TextInputLayout>

    <View
        android:id="@+id/line_food"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/input_layout_food_state"
        android:layout_marginTop="0dp"
        android:background="@color/lightYellowDrawer" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scrollview_food_params"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/button_save_food"
        android:layout_below="@+id/line_food"
        android:padding="@dimen/activity_vertical_margin"
        android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

        <LinearLayout
            android:id="@+id/layout_food_params"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/button_save_food"
            android:layout_below="@+id/line_food"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_food_energy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

                <EditText
                    android:id="@+id/et_food_energy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:ems="10"
                    android:hint="@string/hint_energy_value"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_food_proteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

                <EditText
                    android:id="@+id/et_food_proteins"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_proteins_value"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_food_fats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

                <EditText
                    android:id="@+id/et_food_fats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_fats_value"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_food_carbs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

                <EditText
                    android:id="@+id/et_food_carbs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_carbs_value"
                    android:inputType="numberDecimal" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_save_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:elevation="0dp"
        android:text="@string/button_save" />


</RelativeLayout>