<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_add_food"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_addFoodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

        <EditText
            android:id="@+id/et_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:hint="@string/hint_foodName"
            android:inputType="textPersonName"
            android:textSize="22sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_addFoodState"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_addFoodName"
        android:layout_marginTop="5dp"
        app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

        <EditText
            android:id="@+id/et_food_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/hint_foodState"
            android:inputType="textPersonName" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_btns_food"
        android:layout_below="@+id/input_layout_addFoodState"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ListView
            android:id="@+id/list_view_foods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:background="@color/lightGreyBackground" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_btns_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_add_new_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/button_addNewFood" />

        <Button
            android:id="@+id/button_sync_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/button_syncFood" />

    </LinearLayout>

</RelativeLayout>