<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_addRateName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:hintTextAppearance="@android:style/TextAppearance.DeviceDefault">

        <EditText
            android:id="@+id/et_newIRateName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hint_intakeRate_name"
            android:inputType="textPersonName"
            android:textSize="22sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layout_btns_rates"
        android:layout_below="@+id/input_layout_addRateName"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <ListView
            android:id="@+id/list_view_rates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0sp"
            android:background="@color/lightGreyBackground" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layout_btns_rates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_add_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/button_addRate" />

        <Button
            android:id="@+id/button_sync_rates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/button_syncRate" />

    </LinearLayout>

</RelativeLayout>